--- a/.github/workflows/build-disk.yml
+++ b/.github/workflows/build-disk.yml
@@ -28,7 +28,8 @@ env:
   IMAGE_REGISTRY: "ghcr.io/${{ github.repository_owner }}"  # do not edit
   DEFAULT_TAG: "latest"
   #BIB_IMAGE: "ghcr.io/lorbuschris/bootc-image-builder:20250608" # "quay.io/centos-bootc/bootc-image-builder:latest" - see https://github.com/osbuild/bootc-image-builder/pull/954
-  BIB_IMAGE: "quay.io/centos-bootc/bootc-image-builder:latest"
+  #BIB_IMAGE: "quay.io/centos-bootc/bootc-image-builder:latest"
+  BIB_IMAGE: "ghcr.io/osbuild/bootc-image-builder:latest"
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref || github.run_id }}
   cancel-in-progress: true
