--- a/.github/workflows/build-disk.yml
+++ b/.github/workflows/build-disk.yml
@@ -30,7 +30,7 @@ env:
   #BIB_IMAGE: "ghcr.io/lorbuschris/bootc-image-builder:20250608" # "quay.io/centos-bootc/bootc-image-builder:latest" - see https://github.com/osbuild/bootc-image-builder/pull/954
   #BIB_IMAGE: "quay.io/centos-bootc/bootc-image-builder:latest"
   #BIB_IMAGE: "ghcr.io/osbuild/bootc-image-builder:latest"
-  BIB_IMAGE: "quay.io/fedora/fedora-bootc"
+  BIB_IMAGE: "quay.io/fedora/fedora-silverblue:latest"
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref || github.run_id }}
   cancel-in-progress: true
