--- a/disk_config/iso.toml
+++ b/disk_config/iso.toml
@@ -1,3 +1,8 @@
+[[customizations.filesystem]]
+mountpoint = "/"
+minsize = "20 GiB"
+mountpoint = "/boot"
+minsize = "1 GiB"
 [customizations.installer.kickstart]
 contents = """
 %post
