--- a/disk_config/iso.toml
+++ b/disk_config/iso.toml
@@ -1,6 +1,8 @@
 [[customizations.filesystem]]
 mountpoint = "/"
 minsize = "20 GiB"
+
+[[customizations.filesystem]]
 mountpoint = "/boot"
 minsize = "1 GiB"
 [customizations.installer.kickstart]
