--- a/disk_config/iso.toml
+++ b/disk_config/iso.toml
@@ -1,10 +1,13 @@
 [[customizations.filesystem]]
 mountpoint = "/"
 minsize = "20 GiB"
+filesystem = "btrfs"
 
 [[customizations.filesystem]]
 mountpoint = "/boot"
 minsize = "1 GiB"
+filesystem = "ext4"
+
 [customizations.installer.kickstart]
 contents = """
 %post
